[package]
name = "glome"
version = "0.1.0"
edition = "2021"

[features]
default = [ "dalek" ]
dalek = [ "dep:x25519-dalek" ]
openssl = [ "dep:openssl" ]
cli = [ "dep:base64", "dep:clap" ]

[dependencies]
# lib
sha2 = "0.10"
hmac = "0.12"
x25519-dalek = { version = "2.0", features = ["getrandom", "static_secrets"], optional = true }
openssl = { version = "0.10", optional = true }

# cli
base64 = { version = "0.21", optional = true }
clap = { version = "4", features = ["derive"], optional = true}

[dev-dependencies]
# test
hex = "0.4"
hex-literal = "0.3"
tempfile = "3.14.0"
yaml-rust2 = "0.9"

[lib]
name = "glome"
path = "src/lib.rs"

[[bin]]
name = "glome"
path = "src/cli/bin.rs"

# The binary has more dependencies than the library. We allow skipping the binary and its
# dependencies by hiding it behind a feature.
required-features = ["cli"]
